--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,3 +17,11 @@
     color: #b01b1b !important;
     border: #b01b1b solid 2px;
 }
+div#wish-text {
+    border: #b01b1b solid 1px;
+    border-radius: 5px;
+}
+.text-center {
+    text-align: center;
+    color: #b01b1b;
+}
