--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,16 +12,38 @@
     display: block;
     transition: 0.3s;
 }
+
 .btn-style:hover {
     background-color: #ffffff;
     color: #b01b1b !important;
     border: #b01b1b solid 2px;
 }
+
 div#wish-text {
     border: #b01b1b solid 1px;
     border-radius: 5px;
 }
+
 .text-center {
     text-align: center;
     color: #b01b1b;
+}
+
+ol.ol-style li>input[type=radio] {
+    margin: 5px;
+}
+
+ol.ol-style li>input[type=url] {
+    margin-top: 10px;
+}
+
+ol.ol-style li>p {
+    font-size: 16px;
+}
+.my-10 {
+    display: block;
+    margin: 10px auto;
+}
+.mb-5 {
+    margin-bottom: 5px;
 }
